Simplify, remove dead code